<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">我的Notes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_title">Notes标题</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="notes_subtitle">Notes副标题</string>
    <string name="web_url">输入web url</string>
    <string name="ok">Ok</string>
    <string name="cancel">取消</string>
    <string name="notes_description">输入Notes</string>
    <string name="pick_color">选择颜色</string>
    <string name="add_image">添加图片</string>
    <string name="add_web_link">添加外部链接</string>
</resources>
