<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">
    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:tint="@color/ColorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/imgBack"/>

    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:tint="@color/ColorWhite"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_tick"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/imgDone"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"/>

    <EditText
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/etNoteTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBack"
            android:textSize="@dimen/_14ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorWhite"
            android:padding="@dimen/_10sdp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/notes_title"
            android:fontFamily="@font/manrope_bold"
            android:ellipsize="end"
            android:layout_margin="@dimen/_10sdp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/tvDateTime"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
            android:textSize="@dimen/_8ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorGray"
            android:maxLines="1"
            android:fontFamily="@font/manrope_bold"
            android:ellipsize="end"
            android:paddingStart="@dimen/_10sdp" tools:ignore="RtlSymmetry"/>


    -<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/l1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateTime"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal">

    <View
            android:background="@color/ColorBlue"
            android:layout_height="match_parent"
            android:layout_width="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/colorView"/>

    <EditText
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/etNoteSubTitle"
            android:textSize="@dimen/_10ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorWhite"
            android:padding="@dimen/_10sdp"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/notes_subtitle"
            android:fontFamily="@font/manrope_regular"
            android:ellipsize="end"/>

</LinearLayout>

    <ImageView
            android:layout_height="@dimen/_300sdp"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/imgNote"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/l1"
            android:visibility="gone"/>


    -<LinearLayout
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/layoutWebUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgNote"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="gone">

    <EditText
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/etWebLink"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorWhite"
            android:padding="@dimen/_10sdp"
            android:inputType="textMultiLine"
            android:hint="@string/web_url"
            android:fontFamily="@font/manrope_regular"
            android:text="http://"/>


    -<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_gravity="end">

    <Button
            android:background="@color/colorAccent"
            android:layout_height="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:id="@+id/btnCancel"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/ColorWhite"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"/>

    <Button
            android:background="@color/colorAccent"
            android:layout_height="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/btnOk"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/ColorWhite"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/ok"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"/>

</LinearLayout>

</LinearLayout>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:id="@+id/tvWebLink"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/layoutWebUrl"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorGray"
            android:padding="@dimen/_10sdp"
            android:fontFamily="@font/manrope_bold"
            android:ellipsize="end"
            android:visibility="gone"
            android:autoLink="web"/>

    <EditText
            android:background="@null"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/etNoteDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWebLink"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@color/ColorGray"
            android:textColor="@color/ColorWhite"
            android:padding="@dimen/_10sdp"
            android:inputType="textMultiLine"
            android:hint="@string/notes_description"
            android:fontFamily="@font/manrope_regular"
            android:layout_margin="@dimen/_10sdp"/>


    -<FrameLayout
        android:layout_height="@dimen/_40sdp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
            android:layout_height="@dimen/_24sdp"
            android:layout_width="@dimen/_24sdp"
            android:src="@drawable/img_bar"
            android:id="@+id/imgMore"
            android:layout_gravity="center"/>

</FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>