<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
        tools:context=".MainActivity"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_peekHeight="40dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutBottomSheet">

    <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent" >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tick"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:tint="@color/ColorWhite"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_image"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:tint="@color/ColorWhite"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_link"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:tint="@color/ColorWhite"/>
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:layout_gravity="end"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:tint="@color/ColorWhite"/>
        </RelativeLayout>

    </LinearLayout>
    <FrameLayout
            android:layout_height="@dimen/_40sdp"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

    <ImageView
            android:layout_height="@dimen/_24sdp"
            android:layout_width="@dimen/_24sdp"
            android:id="@+id/imgMore"
            android:src="@drawable/img_bar"
            android:layout_gravity="center"/>

</FrameLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="@dimen/_5sdp">


    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fNote1"
        android:paddingStart="@dimen/_5sdp"
        tools:ignore="RtlSymmetry">

        <View
                android:background="@drawable/note_color_1"
                android:layout_height="@dimen/_24sdp"
                android:layout_width="@dimen/_24sdp"/>

        <ImageView
                android:layout_height="@dimen/_16sdp"
                android:layout_width="@dimen/_16sdp"
                android:id="@+id/imgNote1"
                android:layout_gravity="center"
                app:tint="@color/ColorWhite"/>

</FrameLayout>


    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fNote2"
        android:paddingStart="@dimen/_5sdp"
        tools:ignore="RtlSymmetry">

        <View
                android:background="@drawable/note_color_2"
                android:layout_height="@dimen/_24sdp"
                android:layout_width="@dimen/_24sdp"/>

        <ImageView
                android:layout_height="@dimen/_16sdp"
                android:layout_width="@dimen/_16sdp"
                android:id="@+id/imgNote2"
                android:layout_gravity="center"
                app:tint="@color/ColorWhite"/>

</FrameLayout>

    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fNote4"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry">

    <View
            android:background="@drawable/note_color_4"
            android:layout_height="@dimen/_24sdp"
            android:layout_width="@dimen/_24sdp"/>

    <ImageView
            android:layout_height="@dimen/_16sdp"
            android:layout_width="@dimen/_16sdp"
            android:id="@+id/imgNote4"
            android:layout_gravity="center"
            app:tint="@color/ColorWhite"/>

</FrameLayout>


    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fNote5"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry">


        <View

                android:background="@drawable/note_color_5"
                android:layout_height="@dimen/_24sdp"
                android:layout_width="@dimen/_24sdp"/>

        <ImageView
                android:layout_height="@dimen/_16sdp"
                android:layout_width="@dimen/_16sdp"
                android:id="@+id/imgNote5"
                android:layout_gravity="center"
                app:tint="@color/ColorWhite"/>

</FrameLayout>


    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fNote6"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry">

        <View
                android:background="@drawable/note_color_6"
                android:layout_height="@dimen/_24sdp"
                android:layout_width="@dimen/_24sdp"/>

        <ImageView
                android:layout_height="@dimen/_16sdp"
                android:layout_width="@dimen/_16sdp"
                android:id="@+id/imgNote6"
                android:layout_gravity="center"
                app:tint="@color/ColorWhite"/>

</FrameLayout>


    <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/fNote7"
            android:paddingStart="@dimen/_5sdp"
            tools:ignore="RtlSymmetry">


        <View
                android:background="@drawable/note_color_7"
                android:layout_height="@dimen/_24sdp"
                android:layout_width="@dimen/_24sdp"/>


        <ImageView
                android:layout_height="@dimen/_16sdp"
                android:layout_width="@dimen/_16sdp"
                android:id="@+id/imgNote7"
                android:layout_gravity="center"
                app:tint="@color/ColorWhite"/>

</FrameLayout>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/pick_color"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/ColorWhite"
            app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
            android:paddingEnd="@dimen/_10sdp"
            android:textAlignment="textEnd"
            tools:ignore="RtlSymmetry"/>

</LinearLayout>


    <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/layoutImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp">

    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_image"
            app:tint="@color/ColorWhite"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/add_image"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/ColorWhite"
            app:layout_constraintTop_toBottomOf="@id/etNoteTitle"/>

</LinearLayout>


    <LinearLayout
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/layoutWebUrl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp">

    <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_link"
            app:tint="@color/ColorWhite"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"/>

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/add_web_link"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/ColorWhite"
            app:layout_constraintTop_toBottomOf="@id/etNoteTitle"/>

</LinearLayout>

</LinearLayout>